[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Interactions_UI/EnigmeDeCouleur/ContainerColor.gd" type="Script" id=1]
[ext_resource path="res://UI/Interactions_UI/EnigmeDeCouleur/CheckColor.gd" type="Script" id=2]

[node name="ContainerColor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -10.0
margin_right = 50.0
margin_bottom = 10.0
text = "DEBLOQUE CACHE"

[node name="ReturnButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = 89.0
margin_right = 99.0
margin_bottom = 109.0
text = "FERMER"

[node name="Container" type="Container" parent="."]
anchor_left = 0.117
anchor_top = 0.2
anchor_right = 0.117
anchor_bottom = 0.2
margin_left = -19.808
margin_top = -20.0
margin_right = 20.192
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Container"]
margin_left = 4.0
margin_top = 3.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="Container"]
margin_left = 50.0
margin_top = 10.0
margin_right = 165.0
margin_bottom = 30.0
text = "CHANGER"

[node name="Container2" type="Container" parent="."]
anchor_left = 0.117
anchor_top = 0.367
anchor_right = 0.117
anchor_bottom = 0.367
margin_left = -19.808
margin_top = -20.2
margin_right = 20.192
margin_bottom = 19.8
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Container2"]
margin_left = 4.0
margin_top = 3.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="Container2"]
margin_left = 50.0
margin_top = 10.0
margin_right = 165.0
margin_bottom = 30.0
text = "CHANGER"

[node name="Container3" type="Container" parent="."]
anchor_left = 0.117
anchor_top = 0.533
anchor_right = 0.117
anchor_bottom = 0.533
margin_left = -19.808
margin_top = -19.8
margin_right = 20.192
margin_bottom = 20.2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Container3"]
margin_left = 4.0
margin_top = 3.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="Container3"]
margin_left = 50.0
margin_top = 10.0
margin_right = 165.0
margin_bottom = 30.0
text = "CHANGER"

[node name="Container4" type="Container" parent="."]
anchor_left = 0.117
anchor_top = 0.7
anchor_right = 0.117
anchor_bottom = 0.7
margin_left = -19.808
margin_top = -20.0
margin_right = 20.192
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Container4"]
margin_left = 4.0
margin_top = 3.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="Container4"]
margin_left = 50.0
margin_top = 10.0
margin_right = 165.0
margin_bottom = 30.0
text = "CHANGER"

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.117647 )
show_behind_parent = true
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="Container/Button" to="Container" method="_on_Button_pressed"]
[connection signal="pressed" from="Container2/Button" to="Container2" method="_on_Button_pressed"]
[connection signal="pressed" from="Container3/Button" to="Container3" method="_on_Button_pressed"]
[connection signal="pressed" from="Container4/Button" to="Container4" method="_on_Button_pressed"]
